--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -2,6 +2,7 @@
 *{
 	padding: 0;
 	margin: 0;
+	text-align: center;
 }
 
 body{
@@ -10,7 +11,17 @@ body{
 	text-align: center;
 }
 
+.text-uppercase {
+  text-transform: uppercase;
+}
+
 .contenedor{
+	width: 100%;
+}
+
+.subcontenedor{
+	margin-left: 10%;
+	margin-right: 10%;
 	width: 80%;
 }
 
